--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ fastapi==0.109.2
 uvicorn==0.27.1
 pydantic-settings==2.1.0
 python-dotenv==1.0.1
+python-jose==3.3.0
+python-multipart==0.0.9
+passlib==1.7.4
+bcrypt==4.1.2
