--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,6 @@ python-jose==3.3.0
 python-multipart==0.0.9
 passlib==1.7.4
 bcrypt==4.1.2
+pydantic==2.6.1
+psutil==5.9.8
+prometheus-client==0.19.0
